--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,9 @@
     --title-color:#2E2F42;
     --text-color:#434455;
     --secondary-color:#FFFFFF;
-    --accent-color:#4D5AE5;
+    --logo-button-color:#4D5AE5;
+    --accent-color:#404BBF;
+
     /* logo styles */
     --font-weight-logo:800;
     --font-size-logo:18px;
@@ -34,7 +36,7 @@ ul{
 /* Header */
 /* Logo */
 .logo{
-    color: var(--accent-color);
+    color: var(--logo-button-color);
     font-family:var(--font-family-logo);
     font-weight: var(--font-weight-logo);
     font-size: var(--font-size-logo);
@@ -92,7 +94,7 @@ ul{
 
 .hero>.button{
     color: var(--secondary-color);
-    background-color: var(--accent-color);
+    background-color: var(--logo-button-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     font-family: var(--font-family-main);
@@ -104,8 +106,7 @@ ul{
     }
 
 .hero>.button:hover, .hero>.button:focus {
-    color:var(--accent-color);
-    background-color: var(--secondary-color);
+    background-color: var(--accent-color);
 }
 
 
@@ -157,7 +158,7 @@ ul{
 }
 
 .footer>.logo{
-    color: var(--accent-color);
+    color: var(--logo-button-color);
     font-family: var(--font-family-logo);
     font-weight: var(--font-weight-logo);
     font-size: var(--font-size-logo);
